# third_party_glslang

./: BUILD.gn  CMakeLists.txt  OAT.xml  README.OpenSource  README.en.md  README.md  bundle.json
OGLCompilersDLL/: BUILD.gn
SPIRV/: BUILD.gn
StandAlone/: spirv-remap.cpp
build_overrides/: build.gni  glslang.gni
glslang/: BUILD.gn
glslang/GenericCodeGen/: CodeGen.cpp  Link.cpp
glslang/MachineIndependent/: Intermediate.cpp  glslang_tab.cpp  iomapper.h
glslang/OSDependent/Unix/: ossource.cpp
gtests/: Spv.FromFile.cpp
hlsl/: BUILD.gn
src/OGLCompilersDLL/: BUILD.gn
src/SPIRV/: BUILD.gn
src/glslang/: BUILD.gn
src/glslang/OSDependent/Unix/: ossource.cpp
src/hlsl/: BUILD.gn
