# Copyright (c) 2022 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# external glslang src hlsl build

import("//build/ohos.gni")
import("//third_party/vk-gl-cts/vk_gl_cts.gni")

config("hlsl_config") {
  cflags_cc = deqp_common_cflags_cc

  cflags_cc -= [
    "-frtti",
    "-fexceptions",
  ]
  cflags_cc += [
    "-fPIC",
    "-Wno-reorder",
    "-fno-rtti",
    "-fno-exceptions",
  ]

  defines = deqp_common_defines
  defines -= [
    "DEQP_SUPPORT_DRM=0",
    "DEQP_TARGET_NAME=\"Default\"",
  ]
  defines += [
    "ENABLE_HLSL",
    "ENABLE_OPT=0",
    "GLSLANG_OSINCLUDE_UNIX",
  ]
}

ohos_source_set("hlsl_source") {
  sources = [ "//third_party/glslang/hlsl/stub.cpp" ]
  include_dirs = [
    "//third_party/zlib/src",
    "//third_party/glslang/glslang/Include",
    "//third_party/glslang/glslang/Public",
  ]
  include_dirs += deqp_common_include_dirs

  deps = []
  configs = [ ":hlsl_config" ]
}

ohos_shared_library("libdeqp_hlsl") {
  deps = [ ":hlsl_source" ]
  part_name = "graphic_standard"
  subsystem_name = "graphic"
}
